2002-06-25  Mark McLoughlin  <mark@skynet.ie>

	* bonobo/bonobo-control.c: (impl_Bonobo_Control_getWindowId):
	s/gdk_get_default_screen/gdk_screen_get_default/
	s/gdk_get_default_display/gdk_display_get_default/

2002-06-25  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: actually add check for multihead gtk+
	this time.

2002-06-18  Mark McLoughlin  <mark@skynet.ie>

	* bonobo/bonobo-control-frame.c:
	(bonobo_control_frame_get_remote_window_id): impl with
	multiscreen support.
	(bonobo_control_frame_get_remote_window): use it here.

	* bonobo/bonobo-control.c: (create_plug): don't show the
	plug here.
	(parse_cookie): parse ',' delimited string returning the
	screen number.
	(impl_Bonobo_Control_getWindowId): parse the cookie and
	set the screen on which the plug should realize accordingly.
	(bonobo_control_do_popup_full): show the menu on the same
	screen as the plug.

	* bonobo/bonobo-ui-init-gtk.c: use HAVE_GTK_MULTIHEAD.

	* configure.in: add check for multihead gtk+.

2002-06-11  Michael Meeks  <michael@ximian.com>

	* tests/test-focus.c (add_control): switch back
	to Sample_Entry so we can test transience.

2002-06-11  Michael Meeks  <michael@ximian.com>

	* configure.in (gnomelocaledir): setup properly.

2002-06-10  Naba Kumar <kh_naba@users.sourceforge.net>

	* configure.in: Added hi in ALL_LINGUAS

2002-06-05  Michael Meeks  <michael@ximian.com>

	* Version 2.0.0
	
2002-06-05  Michael Meeks  <michael@ximian.com>

	* bonobo/*.h: add dummy bin-compat padding for future
	expansion.

Mon Jun 03 15:30:08 2002  George Lebl <jirka@5z.com>

	* configure.in, po/cs.po: add a basic Czech translation

2002-06-01  Michael Meeks  <michael@ximian.com>

	* Version 1.118.0

2002-06-01  Michael Meeks  <michael@ximian.com>

	* configure.in: bump reqs.

2002-05-31  Federico Mena Quintero  <federico@ximian.com>

	* bonobo/bonobo-control-frame.c
	(bonobo_control_frame_size_request): Do not g_return_if_fail() if